--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,8 +24,32 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    implementation 'com.squareup.okhttp3:okhttp:3.11.0'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation 'com.android.support:recyclerview-v7:28.0.0-alpha3'
+
+    //考试依赖begin
+    implementation 'com.squareup.okhttp3:okhttp:3.11.0'
     implementation 'com.google.code.gson:gson:2.8.5'
+
+    //网络日志拦截器
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
+
+    implementation 'com.android.support:recyclerview-v7:28.0.0-alpha3'
+    implementation 'com.android.support:design:28.0.0-alpha3'
+    //RecyclerView 上啦加载下拉刷新 https://github.com/XRecyclerView/XRecyclerView
+    implementation('com.jcodecraeer:xrecyclerview:1.5.9') {
+        exclude group: 'com.android.support'
+    }
+
+    //图片加载 https://github.com/nostra13/Android-Universal-Image-Loader/wiki/Quick-Setup
+    implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+
+    //导入Glide版本记得使用此版本
+    implementation 'com.github.bumptech.glide:glide:3.8.0'
+
+    //轮播图 https://github.com/youth5201314/banner
+    implementation 'com.youth.banner:banner:1.4.10'  //最新版本
+    //考试依赖end
+
+    //bugly依赖 https://bugly.qq.com/docs/user-guide/instruction-manual-android/?v=20180709165613
+
 }
