--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,8 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+        ndk { abiFilters "armeabi", "armeabi-v7a", "arm64-v8a", "x86", "arm64-v8a", "x86_64" }
     }
     buildTypes {
         release {
@@ -51,5 +53,7 @@ dependencies {
     //考试依赖end
 
     //bugly依赖 https://bugly.qq.com/docs/user-guide/instruction-manual-android/?v=20180709165613
+
+    implementation 'com.amap.api:location:latest.integration'
 
 }
