--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,4 +56,6 @@ dependencies {
 
     implementation 'com.amap.api:location:latest.integration'
 
+    implementation 'com.hyman:flowlayout-lib:1.1.2'
+
 }
